# sap-mto-capstone

./: .gitignore  README.md  SEED_DATA_SUMMARY.md  Untitled-3.txt  backend_openapi.json
backend/: Dockerfile  Makefile  __init__.py  mapua_mto.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/api/: billings.py  customers.py  dashboard.py  deliveries.py  orders.py  production_orders.py  products.py
backend/app/repositories/: __init__.py  base_repository.py  billing_repository.py  customer_repository.py  delivery_repository.py  exceptions.py  product_repository.py  production_order_repository.py  sales_order_item_repository.py  sales_order_repository.py
backend/app/schemas/: billings.py  common.py  customers.py  dashboard.py  deliveries.py  orders.py  production_orders.py  products.py
backend/app/services/: __init__.py  billing_service.py  customer_service.py  dashboard_service.py  delivery_service.py  exceptions.py  order_service.py  product_service.py  production_service.py
backend/tests/: test_api.py  test_repositories.py  test_services.py
mto-backend/: API_IMPLEMENTATION.md  ENDPOINT_REFERENCE.md  README.md  alembic.ini  main.py  pyproject.toml
mto-backend/alembic/: env.py
mto-backend/alembic/versions/: 2b343d828866_try_lang.py  539d935ea440_init_schema.py  8da17bdab460_enrich_order_schema.py
mto-backend/app/: __init__.py  database.py  main.py  models.py
mto-backend/migrations/: env.py
mto-backend/scripts/: README.md  SEED_DATA_REFERENCE.md  create_db.py  seed_data.py  verify_seed.py
(+211 files in other folders)
