[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "fpdf2>=2.8.4",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "resend>=2.16.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
